--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@types/pg": "^8.11.6",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chakra-color-picker": "^0.0.6",
     "framer-motion": "^11.2.10",
