--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@types/pg": "^8.11.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chakra-color-picker": "^0.0.6",
-    "framer-motion": "^11.2.10",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.21",
     "pg": "^8.12.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "rebass": "^4.0.7",
     "styled-components": "^6.1.11"
