--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@types/pg": "^8.11.6",
+    "agendadeportistas": "file:",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chakra-color-picker": "^0.0.6",
