--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "rebass": "^4.0.7",
     "styled-components": "^6.1.11"
   },
